# GraphIt

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.code-workspace
lib/: raygui.h
resources/icon/: icon.h  icon.icns  icon.rc
src/: application.cpp  application.h  canvas.cpp  canvas.h  main.cpp
src/actions_center/: action_base_class.h  action_base_class.hpp  actions_center.cpp  actions_center.h  actions_center.hpp  actions_center_algorithm.cpp  algorithm.cpp
src/actions_center/algorithm/: kruskal_add_edge.hpp  switch_current_vertex.hpp  visit_vertex.hpp
src/actions_center/graph_action/: bulk_removal.h  bulk_removal.hpp  dye.h  dye.hpp  general.h  general.hpp  graph_action.cpp  graph_action.h  graph_action.hpp  reweigh.h  reweigh.hpp
src/algorithm/: algorithm_center.cpp  algorithm_center.hpp
src/algorithm/BFS/: bfs.cpp  bfs.hpp
src/algorithms/: algorithm.hpp  algorithm_center.cpp  algorithm_center.hpp
src/algorithms/BFS/: bfs.cpp  bfs.hpp
src/algorithms/Dijkstra/: dijkstra.cpp  dijkstra.hpp
src/algorithms/Kruskal/: kruskal.cpp  kruskal.hpp
src/algorithms/Kruskals/: kruskals.cpp  kruskals.hpp
src/canvas/: canvas.cpp  canvas.h  canvas.hpp  canvas_actions.cpp  canvas_utilities.cpp
src/configs/: terminal_prefix.h  version.h
src/graph/: edge.cpp  edge.h  graph.cpp  graph.h  graph.hpp  graph_draw.cpp  loading_new_graph.cpp  node.cpp  node.h  vertex_and_edge.h
src/gui/: gui.cpp  gui.h  gui_color_panel.cpp  gui_color_panel.h  gui_panel.cpp  gui_toolbar.h  gui_utilities.cpp
src/gui/layout/: gui_color_panel.h  gui_load_from.h  gui_toolbar.h
src/io/: io.cpp  io.h  io.hpp  serialization.cpp
src/system/: application.cpp  application.h  application.hpp  settings.cpp  settings.hpp  settings_and_flags.cpp  settings_and_flags.h  terminal_prefix.h  terminal_prefix.hpp  version.h  version.hpp
src/ui/: button.h  panel.cpp  panel.h  panel.hpp  toolbar.h  ui.cpp  ui.h  ui.hpp
src/ui/color_panel/: color_panel.cpp  color_panel.h  color_panel.hpp  color_panel_draw.cpp  color_panel_utilities.cpp
src/ui/confirm/: confirm.h
src/ui/confirmation_dialog/: confirmation_dialog.cpp  confirmation_dialog.hpp  confirmation_dialog_draw.cpp  confirmation_dialog_utilities.cpp
src/ui/confirmation_window/: confirmation_window.h  confirmation_window.hpp
src/ui/file_dialog_load/: file_dialog_load.cpp  file_dialog_load.h  file_dialog_load.hpp  file_dialog_load_draw.cpp  file_dialog_load_utilities.cpp
src/ui/file_dialog_loading/: file_dialog_loading.h
src/ui/file_dialog_save/: file_dialog_save.cpp  file_dialog_save.h  file_dialog_save.hpp  file_dialog_save_draw.cpp  file_dialog_save_utilities.cpp
src/ui/file_dialog_saving/: file_dialog_saving.h
src/ui/settings_menu/: settings_menu.cpp  settings_menu.h  settings_menu.hpp  settings_menu_draw.cpp  settings_menu_utilities.cpp
src/ui/settings_window/: settings_window.h  settings_window_draw.cpp  settings_window_utilities.cpp
src/ui/toolbar/: toolbar.cpp  toolbar.h  toolbar.hpp  toolbar_draw.cpp  toolbar_utilities.cpp
